include next & prev links

--- a/decidim-accountability/app/views/decidim/accountability/results/_project.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/_project.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: results_path } do %>
+<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: results_path, prev_path: "", next_path: "" } do %>
   <%= cell("decidim/accountability/project", result) %>
 
   <div class="mt-8 accountability__project-actions">
