--- a/decidim-core/app/views/layouts/decidim/shared/_layout_item.html.erb
+++ b/decidim-core/app/views/layouts/decidim/shared/_layout_item.html.erb
@@ -8,6 +8,20 @@
         <% end %>
       <% end %>
 
+      <% if local_assigns.has_key?(:prev_path) %>
+        <%= link_to prev_path, class: "layout-2col-grid__arrow prev" do %>
+          <%= icon "arrow-left-s-line" %>
+          <span class="sr-only">prev item</span>
+        <% end %>
+      <% end %>
+
+      <% if local_assigns.has_key?(:next_path) %>
+        <%= link_to next_path, class: "layout-2col-grid__arrow next" do %>
+          <%= icon "arrow-right-s-line" %>
+          <span class="sr-only">next item</span>
+        <% end %>
+      <% end %>
+
       <%= yield %>
     </main>
     <aside><%= yield :aside %></aside>
