search input position on header

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -32,7 +32,7 @@ header{
     }
 
     &__search{
-      @apply hidden md:block col-span-3 xl:col-span-2 lg:col-start-4;
+      @apply hidden md:block col-span-2 col-start-5 xl:col-start-4;
 
       span{
         @apply block relative rounded text-md bg-background;
