--- a/decidim-core/app/views/decidim/shared/_redesigned_floating_help.html.erb
+++ b/decidim-core/app/views/decidim/shared/_redesigned_floating_help.html.erb
@@ -1,5 +1,5 @@
 <div class="is-tip" data-floating-help="floating-help-<%= id %>">
-  <div id="floating-helper-tip" class="px-2">
+  <div id="floating-helper-tip">
     <button class="button button__xs button__text-secondary">
       <%= icon "question-line" %>
       <span><%= t("help", scope: "decidim.shared.floating_help") %></span>
