--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_buttons.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_buttons.scss
@@ -46,7 +46,7 @@
   }
 
   &__text{
-    @apply bg-transparent text-black border-0;
+    @apply bg-transparent text-black border-0 px-0 hover:underline;
 
     &-primary{
       @apply button__text text-primary;
