Change the typed ordered list style definitions to Tailwind syntax

--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_editor.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_editor.scss
@@ -223,10 +223,10 @@
   // extension.
   //
   // Details: https://github.com/tailwindlabs/tailwindcss-typography/issues/296
-  ol[data-type="a"]{ list-style-type: lower-alpha; }
-  ol[data-type="A"]{ list-style-type: upper-alpha; }
-  ol[data-type="i"]{ list-style-type: lower-roman; }
-  ol[data-type="I"]{ list-style-type: upper-roman; }
+  ol[data-type="a"]{ @apply list-[lower-alpha]; }
+  ol[data-type="A"]{ @apply list-[upper-alpha]; }
+  ol[data-type="i"]{ @apply list-[lower-roman]; }
+  ol[data-type="I"]{ @apply list-[upper-roman]; }
 
   .editor-content-videoEmbed{
     @apply max-w-screen-sm;
