--- a/decidim-core/app/views/decidim/shared/_filters.html.erb
+++ b/decidim-core/app/views/decidim/shared/_filters.html.erb
@@ -1,32 +1,9 @@
-<%# REDESIGN_PENDING: Same logic as Meetings %>
+<% filter_sections = [] unless local_assigns.has_key?(:filter_sections) %>
 
-<%= redesigned_filter_form_for filter, url_for, class: "self-stretch", data: { filters: "", component: "accordion" } do |form| %>
-
-  <%
-    # REDESIGN_PENDIGN: fetch the process filters
-    filters = [];
-  %>
-
-  <% filters.each do |f| %>
-    <div class="filter-container">
-      <button data-controls="panel-dropdown-menu-<%= f[0] %>" data-open="true">
-        <%= icon "arrow-down-s-line" %>
-        <%= icon "arrow-up-s-line" %>
-        <span><%= t(f[0], scope: f[4]) %></span>
-      </button>
-      <div id="panel-dropdown-menu-<%= f[0] %>">
-        <%= form.send(
-            f[1] == "radio" ? "collection_radio_buttons" : "collection_check_boxes",
-            f[2],
-            f[3],
-            :first,
-            :last
-        ) do |builder|
-              builder.label {
-                builder.send(f[1] == "radio" ? "radio_button" : "check_box", class: "reset-defaults" , hidden: true ) + content_tag(:div, builder.text, class: "filter" ) }
-          end %>
-      </div>
-    </div>
+<% if filter_sections.present? %>
+  <%= redesigned_filter_form_for filter, url_for, class: "self-stretch", data: { filters: "", component: "accordion" } do |form| %>
+    <% filter_sections.each do |f| %>
+      <%= form.collection_filter(**f) %>
+    <% end %>
   <% end %>
-
 <% end %>
