--- a/decidim-blogs/app/cells/decidim/blogs/content_blocks/highlighted_posts/content.erb
+++ b/decidim-blogs/app/cells/decidim/blogs/content_blocks/highlighted_posts/content.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 
-<span class="content-block__span"><%= "Last published" %></span>
+<span class="content-block__span"><%= t("decidim.blogs.content_blocks.highlighted_posts.last_published") %></span>
 <div class="process__block-grid">
   <% posts_to_render.each do |post| %>
     <%= cell "decidim/blogs/post_g", post %>
