--- a/decidim-meetings/app/cells/decidim/meetings/highlighted_meetings_for_component/show.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/highlighted_meetings_for_component/show.erb
@@ -20,7 +20,7 @@
 <div class="meeting-list__block-list">
   <% if show_calendar? %>
     <div class="meeting-list__block-list-aside">
-      <% [Date.current, Date.current.next_month].each do |start_date| %>
+      <% calendar_months.each do |start_date| %>
         <%= cell "decidim/meetings/meeting_month", collection, start_date: %>
       <% end %>
     </div>
