adapt tip to the button styles & fix mobile position

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_floating_help.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_floating_help.scss
@@ -1,9 +1,9 @@
 [data-floating-help]{
   [id*="tip"]{
-    @apply absolute z-10 right-0 bg-background [&_button]:rounded-r-none [&_svg]:text-gray [&_svg]:fill-current;
+    @apply fixed md:absolute z-10 right-0 [&_button]:bg-background [&_button]:px-2 [&_button]:rounded-r-none [&_svg]:text-gray [&_svg]:fill-current;
 
     &:hover{
-      @apply [&_svg]:text-white;
+      @apply [&_svg]:text-white [&_button]:text-white [&_button]:bg-secondary [&_button]:no-underline;
     }
   }
 
