--- a/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
@@ -9,17 +9,18 @@
         disable: true,
         budget: model.budget_amount,
         allocation: resource_allocation,
+        dialog_open: !resource_added? ? 'budget-excess-modal' : '',
         "redirect-url": resource_path
       },
       disabled: vote_button_disabled?,
       title: vote_button_label do %>
   <%#REDESIGN_PENDING add locale %>
   <% if !resource_added? %>
-    <span>Añadir</span>
+    <span><%= t("add", scope: "decidim.budgets.projects.project_budget_button") %></span>
     <%= icon "add-fill", class: "inline-block" %>
 
   <% else %>
-    <span>Añadido</span>
+    <span><%= t("added", scope: "decidim.budgets.projects.project_budget_button") %></span>
     <%= icon "checkbox-circle-line", class: "inline-block" %>
   <% end %>
 <% end %>
