budget exit modal

--- a/decidim-budgets/app/views/decidim/budgets/projects/_filters_small_view.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_filters_small_view.html.erb
@@ -1,7 +1,7 @@
-<div class="filters-controls hide-for-mediumlarge">
+<!-- <div class="filters-controls hide-for-mediumlarge">
   <button data-open="filter-box" class="filters-controls__trigger" aria-controls="filter-box" aria-haspopup="dialog">
-    <%= t ".filter" %>
-    <%= icon "caret-bottom", class: "icon--small float-right", aria_label: t(".unfold"), role: "img" %>
+    <%#= t ".filter" %>
+    <%#= icon "caret-bottom", class: "icon--small float-right", aria_label: t(".unfold"), role: "img" %>
   </button>
 </div>
 
@@ -13,6 +13,7 @@
     </button>
   </div>
   <div class="filters">
-    <%= render partial: "filters", locals: { type: :small } %>
+    <%#= render partial: "filters", locals: { type: :small } %>
   </div>
 </div>
+ -->
