--- a/decidim-budgets/app/views/decidim/budgets/projects/_exit_modal.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_exit_modal.html.erb
@@ -1,22 +1,21 @@
 <% if current_user && current_component.current_settings.votes == "enabled" && !current_workflow.voted?(budget) %>
-  <div class="reveal" data-reveal id="exit-notification" role="dialog" aria-modal="true" aria-labelledby="exit-notification-label" aria-live="polite">
-    <div class="reveal__header">
-      <h3 id="exit-notification-label" class="reveal__title"><%= t(".title") %></h3>
-      <button class="close-button" data-close aria-label="<%= t(".close_modal") %>" type="button">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="static__content text-center">
-      <p><%= t(".message") %></p>
-    </div>
-
-    <div class="row">
-      <div class="columns medium-8 medium-offset-2">
-        <button class="button primary expanded" data-close type="button">
-          <%= t(".cancel") %>
+  <%= decidim_modal id: "budget-exit-modal" do %>
+    <div class="form-defaults" id="budget-excess">
+      <h2 class="h2" data-dialog-title>
+        <%= current_order.projects_rule? ? t("title", scope: "decidim.budgets.projects.budget_excess.projects_excess") : t("title", scope: "decidim.budgets.projects.budget_excess.budget_excess") %>
+      </h2>
+      <%=  %>
+      <div data-dialog-container>
+        <div class="form__wrapper gap-2">
+          <p><%= t("message", scope: "decidim.budgets.projects.exit_modal") %></p>
+        </div>
+      </div>
+      <div data-dialog-actions>
+        <button data-dialog-close="budget-exit-modal" class="button button__sm md:button__lg button__secondary">
+          <p><%= t("cancel", scope: "decidim.budgets.projects.exit_modal") %></p>
         </button>
-        <%= link_to t(".exit"), budget_projects_path, id: "exit-notification-link", class: "button primary hollow expanded" %>
+        <%= link_to t("exit", scope: "decidim.budgets.projects.exit_modal"), budget_projects_path, id: "exit-notification-link", class: "button button__sm md:button__lg button__secondary" %>
       </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
