Replace prefixed process class names with generic participatory-space

--- a/decidim-blogs/app/cells/decidim/blogs/content_blocks/highlighted_posts/content.erb
+++ b/decidim-blogs/app/cells/decidim/blogs/content_blocks/highlighted_posts/content.erb
@@ -10,7 +10,7 @@
 </div>
 
 <span class="content-block__span"><%= t("decidim.blogs.content_blocks.highlighted_posts.last_published") %></span>
-<div class="process__block-grid">
+<div class="participatory-space__block-grid">
   <% posts_to_render.each do |post| %>
     <%= cell "decidim/blogs/post_g", post %>
   <% end %>
