--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_last_activity/content.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_last_activity/content.erb
@@ -1,6 +1,6 @@
 <div class="content-block__title">
   <h2 class="h2 decorator"><%= t("activity", scope: "decidim.profiles.show") %></h2>
-  <div class="<%= prefixed_class("metadata-link-endorsers") %>">
+  <div class="participatory-space__metadata-link-endorsers">
     <%= render_recent_avatars %>
   </div>
   <div class="label text-lg"><%= participants_count %></div>
