--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_metadata/content.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_metadata/content.erb
@@ -1,4 +1,4 @@
-<div class="<%= prefixed_class("metadata") %>">
+<div class="participatory-space__metadata">
   <%= render :metadata %>
 
   <%= render :recent_users %>
