--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_metadata/metadata.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_metadata/metadata.erb
@@ -1,6 +1,6 @@
 <% metadata_items.each do |item| %>
-  <div class="<%= prefixed_class("metadata-item") %>">
-    <div class="<%= prefixed_class("metadata-item-title") %>">
+  <div class="participatory-space__metadata-item">
+    <div class="participatory-space__metadata-item-title">
       <%= icon item[:icon] %>
       <span><%= item[:title] %></span>
     </div>
