--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_metrics/content.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_metrics/content.erb
@@ -10,6 +10,6 @@
   <% end %>
 </div>
 
-<div class="process__block-grid">
+<div class="participatory-space__block-grid">
   <%= highlighted_metrics %>
 </div>
