--- a/decidim-participatory_processes/app/cells/decidim/participatory_processes/processes/show.erb
+++ b/decidim-participatory_processes/app/cells/decidim/participatory_processes/processes/show.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 
-<div class="process__block-grid">
+<div class="participatory-space__block-grid">
   <% processes.each do |process| %>
     <%= card_for(process) %>
   <% end %>
