Replace missing process__ prefixed classes

--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -14,7 +14,7 @@
   )
 %>
 
-<div class="process__container">
+<div class="participatory-space__container">
 
   <%= participatory_space_floating_help %>
 
@@ -33,7 +33,7 @@
 
 </div>
 
-<!-- this elements goes outside of the .process__container block -->
+<!-- this elements goes outside of the .participatory-space__container block -->
 <section class="process__block-reference">
   <%= resource_reference(current_participatory_space) %>
 </section>
