--- a/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
@@ -1,9 +1,9 @@
 <%= redesigned_filter_form_for filter, url_for, class: "meeting__filter-container", data: { filters: "", component: "accordion" } do |form| %>
 
-  <a href="#" class="mb-8 button button__sm button__text-secondary">
-    <%= icon "arrow-left-line", class: 'inline-block' %>
-    <span>Volver a presupuestos</span>
-  </a>
+
+
+  <%= icon "arrow-left-line", class: 'inline-block' %>
+  <%= link_to t("back_to",  scope: "decidim.budgets.budget_information_modal"), budgets_path, class: 'mb-8 button button__sm button__text-secondary' %>
 
   <div class="filter-search filter-container">
     <%= form.search_field :search_text_cont, label: false, class: "input-group-field", placeholder: t(".search"), title: t(".search"), "aria-label": t(".search"), data: { disable_dynamic_change: true } %>
