--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -71,11 +71,8 @@
 @import "stylesheets/decidim/redesigned_conversations.scss";
 @import "stylesheets/decidim/redesigned_versions.scss";
 @import "stylesheets/decidim/redesigned_hero.scss";
-
-// This imports all the Decidim module stylesheet imports registered at
-// `config/assets.rb` of the module for the "app" group.
-// @import "!decidim-style-imports[app]";
-// @import "!decidim-style-imports[redesigned_app]";
+// participatory spaces are quite similar between processes and assemblies (different modules), so their stylesheets are placed in the core
+@import "stylesheets/decidim/redesigned_participatory_spaces.scss";
 
 // Application specific styles: https://docs.decidim.org/en/customize/styles/#_webpacker
 @import "stylesheets/decidim/decidim_application";
