--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -1,74 +1,78 @@
-<div id="order-progress">
-  <div class="budget-summary__content">
-    <div class="budget-summary__progressbox" data-current-allocation="<%= current_order ? current_order.total : 0 %>">
-      <% if include_heading && !current_order_checked_out? %>
-        <p><%== current_rule_description %></p>
-      <% end %>
-      <div class="budget-summary__progressbar">
-        <div class="progress budget-progress" role="progressbar" aria-valuenow="<%= current_order_budget_percent %>" aria-valuetext="<%= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-meter budget-summary__progressbar--minimum" style="width: <%= current_order_budget_percent_minimum %>%">
-            <span class="progress-meter--minimum-mark"></span>
+<div class="layout-1col pt-8">
+  <div class="cols-10">
+    <div id="order-progress">
+      <div class="budget-summary__content">
+        <div class="budget-summary__progressbox" data-current-allocation="<%= current_order ? current_order.total : 0 %>">
+          <% if include_heading && !current_order_checked_out? %>
+            <p><%== current_rule_description %></p>
+          <% end %>
+          <div class="budget-summary__progressbar">
+            <div class="progress budget-progress" role="progressbar" aria-valuenow="<%= current_order_budget_percent %>" aria-valuetext="<%= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-meter budget-summary__progressbar--minimum" style="width: <%= current_order_budget_percent_minimum %>%">
+                <span class="progress-meter--minimum-mark"></span>
+              </div>
+              <div class="progress-meter budget-summary__progressbar--meter" style="width: <%= current_order_budget_percent %>%">
+              </div>
+            </div>
+
+            <div class="budget-summary__progressbar-marks">
+              <span class="budget-summary__progressbar-legend" style="width: <%= current_order_budget_percent_minimum %>%;">
+                <%= t(".assigned") %>
+                <strong id="order-total-budget" class="budget-summary__progressbar-legend-strong">
+                  <% if current_order.projects_rule? %>
+                    <%= current_order.projects.count %> / <%= current_order.maximum_projects %>
+                  <% else %>
+                    <%= budget_to_currency current_order&.total_budget.to_f %>
+                  <% end %>
+                </strong>
+              </span>
+              <% if current_order.minimum_budget > 0 %>
+                <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_center">
+                  <%= t(".minimum") %>
+                  <strong class="budget-summary__progressbar-legend-strong">
+                    <%= budget_to_currency(current_order.minimum_budget) %>
+                  </strong>
+                </span>
+              <% end %>
+              <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_right" data-total-allocation="<%= current_order.available_allocation %>">
+                <%= t(".budget") %>
+                <strong class="budget-summary__progressbar-legend-strong">
+                  <% if current_order.projects_rule? %>
+                    <%= current_order.maximum_projects %>
+                  <% else %>
+                    <%= budget_to_currency(budget.total_budget) %>
+                  <% end %>
+                </strong>
+              </span>
+            </div>
           </div>
-          <div class="progress-meter budget-summary__progressbar--meter" style="width: <%= current_order_budget_percent %>%">
-          </div>
+
+          <%#REDESIGN_PENDING remove? %>
+          <%# if !current_order_checked_out? && voting_open? %>
+            <!-- <button class="button button__xl" disabled="true" data-toggle="budget-confirm" <%#= budget_confirm_disabled_attr %>>
+              <%#= t(".vote") %>
+            </button> -->
+          <%# end %>
         </div>
 
-        <div class="budget-summary__progressbar-marks">
-          <span class="budget-summary__progressbar-legend" style="width: <%= current_order_budget_percent_minimum %>%;">
-            <%= t(".assigned") %>
-            <strong id="order-total-budget" class="budget-summary__progressbar-legend-strong">
-              <% if current_order.projects_rule? %>
-                <%= current_order.projects.count %> / <%= current_order.maximum_projects %>
-              <% else %>
-                <%= budget_to_currency current_order&.total_budget.to_f %>
-              <% end %>
-            </strong>
-          </span>
-          <% if current_order.minimum_budget > 0 %>
-            <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_center">
-              <%= t(".minimum") %>
-              <strong class="budget-summary__progressbar-legend-strong">
-                <%= budget_to_currency(current_order.minimum_budget) %>
-              </strong>
-            </span>
+        <div class="progressbox-fixed-wrapper justify-self-center justify-items-center" data-progressbox-fixed>
+          <%#REDESIGN_PENDING remove? %>
+          <!--  <div class="budget-summary__progressbox budget-summary__progressbox--fixed">
+           <div class="progress budget-progress budget-progress--fixed" role="progressbar" aria-valuenow="<%#= current_order_budget_percent %>" aria-valuetext="<%#= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-meter progress-meter--minimum" style="width: <%#= current_order_budget_percent_minimum %>%"></div>
+              <div class="progress-meter budget-progress__meter" style="width: <%#= current_order_budget_percent %>%">
+                <span class="progress-meter-text progress-meter-text--right"><%#= current_order_budget_percent %>%</span>
+              </div>
+            </div>
+          </div>-->
+          <% if !current_order_checked_out? && voting_open? %>
+            <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%= budget_confirm_disabled_attr %>>
+              <span><%= t(".vote") %></span>
+              <%= icon "check-line" %>
+            </button>
           <% end %>
-          <span class="budget-summary__progressbar-legend budget-summary__progressbar-marks_right" data-total-allocation="<%= current_order.available_allocation %>">
-            <%= t(".budget") %>
-            <strong class="budget-summary__progressbar-legend-strong">
-              <% if current_order.projects_rule? %>
-                <%= current_order.maximum_projects %>
-              <% else %>
-                <%= budget_to_currency(budget.total_budget) %>
-              <% end %>
-            </strong>
-          </span>
         </div>
       </div>
-
-      <%#REDESIGN_PENDING remove? %>
-      <%# if !current_order_checked_out? && voting_open? %>
-        <!-- <button class="button button__xl" disabled="true" data-toggle="budget-confirm" <%#= budget_confirm_disabled_attr %>>
-          <%#= t(".vote") %>
-        </button> -->
-      <%# end %>
-    </div>
-
-    <div class="progressbox-fixed-wrapper justify-self-center justify-items-center" data-progressbox-fixed>
-      <%#REDESIGN_PENDING remove? %>
-      <!--  <div class="budget-summary__progressbox budget-summary__progressbox--fixed">
-       <div class="progress budget-progress budget-progress--fixed" role="progressbar" aria-valuenow="<%#= current_order_budget_percent %>" aria-valuetext="<%#= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-meter progress-meter--minimum" style="width: <%#= current_order_budget_percent_minimum %>%"></div>
-          <div class="progress-meter budget-progress__meter" style="width: <%#= current_order_budget_percent %>%">
-            <span class="progress-meter-text progress-meter-text--right"><%#= current_order_budget_percent %>%</span>
-          </div>
-        </div>
-      </div>-->
-      <% if !current_order_checked_out? && voting_open? %>
-        <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%= budget_confirm_disabled_attr %>>
-          <span><%= t(".vote") %></span>
-          <%= icon "check-line" %>
-        </button>
-      <% end %>
     </div>
   </div>
 </div>
