--- a/decidim-core/app/cells/decidim/content_blocks/participatory_space_metrics/content.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/participatory_space_metrics/content.erb
@@ -4,7 +4,7 @@
 
   <% if show_all_path.present? %>
     <%= link_to show_all_path, class: "button button__sm button__text-secondary" do %>
-      <span><%= t("decidim.content_blocks.participatory_space_metrics.show_all") %></span>
+      <span><%= t("decidim.pages.participatory_space.metrics.link") %></span>
       <%= icon "arrow-right-line" %>
     <% end %>
   <% end %>
