--- a/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/show.html.erb
@@ -26,7 +26,7 @@ edit_link(
     <%= render partial: "budget_summary", locals: { include_heading: false } %>
   <% end %>
 <% end %>
-<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: budgets_path } do %>
+<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: budget_path(budget) } do %>
   <%= cell("decidim/budgets/limit_announcement", budget) %>
   <% if component_settings.geocoding_enabled? && project.geocoded? %>
     <%= render partial: "decidim/shared/static_map", locals: { icon_name: "projects", geolocalizable: project } %>
