remove margin from budget-summary

--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -1,6 +1,6 @@
 .budget{
   &-summary{
-    @apply bg-tertiary py-10 px-16 -ml-16 -mt-12 -mr-[8.5rem];
+    @apply bg-tertiary py-10 px-16;
 
     &__container{
       @apply -mt-12 -my-16 mb-8;
