Don't force id of checkbox in tree

--- a/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
@@ -20,8 +20,7 @@
         class: "reset-defaults",
         data:,
         is_root_check_box: is_blank_root,
-        parent_id:,
-        id: "dropdown-title-#{data_checkboxes_tree_id}"
+        parent_id:
       ),
       leaf.value.to_s,
       nil
