Recover hero on old layout of processes for components inside them

--- a/decidim-participatory_processes/app/views/layouts/decidim/participatory_process.html.erb
+++ b/decidim-participatory_processes/app/views/layouts/decidim/participatory_process.html.erb
@@ -6,6 +6,7 @@
 ) %>
 
 <%= render "layouts/decidim/application" do %>
+  <%= render partial: "layouts/decidim/process_header" %>
   <%= cell "decidim/translation_bar", current_organization %>
   <div class="wrapper">
     <%= yield %>
