--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -1,5 +1,5 @@
 <div class="layout-1col pt-8">
-  <div class="cols-12">
+  <div class="budget-summary__cols">
     <div id="order-progress">
       <div class="budget-summary__content">
         <div class="budget-summary__progressbox" data-current-allocation="<%= current_order ? current_order.total : 0 %>">
