--- a/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_order_progress.html.erb
@@ -17,7 +17,7 @@
 
             <div class="budget-summary__progressbar-marks">
               <span class="budget-summary__progressbar-legend" style="width: <%= current_order_budget_percent_minimum %>%;">
-                <%= t(".assigned") %>
+                <%= t("assigned", scope: "decidim.budgets.projects.budget_summary") %>
                 <strong id="order-total-budget" class="budget-summary__progressbar-legend-strong">
                   <% if current_order.projects_rule? %>
                     <%= current_order.projects.count %> / <%= current_order.maximum_projects %>
@@ -46,25 +46,9 @@
               </span>
             </div>
           </div>
-
-          <%#REDESIGN_PENDING remove? %>
-          <%# if !current_order_checked_out? && voting_open? %>
-            <!-- <button class="button button__xl" disabled="true" data-toggle="budget-confirm" <%#= budget_confirm_disabled_attr %>>
-              <%#= t(".vote") %>
-            </button> -->
-          <%# end %>
         </div>
 
         <div class="progressbox-fixed-wrapper justify-self-center justify-items-center" data-progressbox-fixed>
-          <%#REDESIGN_PENDING remove? %>
-          <!--  <div class="budget-summary__progressbox budget-summary__progressbox--fixed">
-           <div class="progress budget-progress budget-progress--fixed" role="progressbar" aria-valuenow="<%#= current_order_budget_percent %>" aria-valuetext="<%#= current_order_budget_percent %>%" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-meter progress-meter--minimum" style="width: <%#= current_order_budget_percent_minimum %>%"></div>
-              <div class="progress-meter budget-progress__meter" style="width: <%#= current_order_budget_percent %>%">
-                <span class="progress-meter-text progress-meter-text--right"><%#= current_order_budget_percent %>%</span>
-              </div>
-            </div>
-          </div>-->
           <% if !current_order_checked_out? && voting_open? %>
             <button class="button button__secondary button__xl" data-dialog-open="budget-confirm" <%= budget_confirm_disabled_attr %>>
               <span><%= t(".vote") %></span>
